# namespace_error_cpp

./: CMakeLists.txt  README.md
src/: namespaceerror.cpp
src/easylogging/: easylogging++.h
src/kernels/: kernels.cpp  kernels.h
